Fix for random joke

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -21,7 +21,7 @@ h3 {
 	margin:16px 31px;
 	background-color: rgba(252, 202, 70, .7);
 }
-.trigger, .tweet {
+.trigger, .tweet, .joke {
 	background-color:#fccc46;
 	border-radius:28px;
 	border:1px solid #fe802d;
