--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ h3 { color: #579C87; }
 
 .box { border: 5px solid #FCCA46; padding: 16px 31px; margin: 16px 31px; background-color: rgba(252, 202, 70, 0.7); }
 
-.trigger, .tweet { background-color: #fccc46; border-radius: 28px; border: 1px solid #fe802d; display: inline-block; cursor: pointer; color: #ffffff; font-family: Arial; font-size: 17px; padding: 16px 31px; text-decoration: none; text-shadow: 0px 1px 0px #fe802d; }
+.trigger, .tweet, .joke { background-color: #fccc46; border-radius: 28px; border: 1px solid #fe802d; display: inline-block; cursor: pointer; color: #ffffff; font-family: Arial; font-size: 17px; padding: 16px 31px; text-decoration: none; text-shadow: 0px 1px 0px #fe802d; }
 
 .trigger:hover { background-color: #fe802d; }
 
