--- a/css/style.css
+++ b/css/style.css
@@ -16,3 +16,8 @@ h3 { color: #579C87; }
 .trigger:hover { background-color: #fe802d; }
 
 .trigger:active { position: relative; top: 1px; }
+
+#loader-quote, #loader-joke { border: 16px solid #f3f3f3; /* Light grey */ border-top: 16px solid #3498db; /* Blue */ border-radius: 50%; width: 120px; height: 120px; animation: spin 2s linear infinite; display: block; margin-left: auto; margin-right: auto; }
+
+@keyframes spin { 0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); } }
